--- a/sass/components/_icons.scss
+++ b/sass/components/_icons.scss
@@ -77,7 +77,7 @@
 		height: auto;
 	}
 	&--socialMediaCardLinkIcon {
-		margin-top: 1rem;
+		// margin-top: 1rem;
 		width: 1.5rem;
 		height: auto;
 	}
